fix aside on tablet

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -239,7 +239,7 @@ html.transition *:after {
   display: grid;
   grid-gap: 30px;
   grid-template-columns: 3fr 1fr;
-  @media (max-width: 770px) {
+  @media (max-width: 830px) {
     padding: 20px;
     grid-template-columns: 1fr;
   }
